--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -26,32 +26,27 @@
             <a class="header__link" href="/suporte.html">Suporte</a>
         </nav>
     </header>
-    <main>
-        <!-- <section style="text-align: center;">
-        <button class="textbottom" onclick="alert('oi')"; style="padding: 40px 30px; border-radius: 30px; box-shadow: 3px 3px 0 gray; font-size: 1,75 em; cursor: pointer;">
-            clique aqui!
-        </button>
-    </section> -->
+    <main class="campo">
         <section class="teclado">
-            <button class="tecla tecla-pom">pom</button>
-            <button class="tecla tecla-clap">clap</button>
-            <button class="tecla tecla-tim">tim</button>
-            <button class="tecla tecla-puff">puff</button>
-            <button class="tecla tecla-splash">splash</button>
-            <button class="tecla tecla-toim">toim</button>
-            <button class="tecla tecla-psh">psh</button>
-            <button class="tecla tecla-tic">tic</button>
-            <button class="tecla tecla-tom">tom</button>
+            <button class="tecla tecla_pom">Pom</button>
+            <button class="tecla tecla_clap">Clap</button>
+            <button class="tecla tecla_tim">Tim</button>
+            <button class="tecla tecla_puff">Puff</button>
+            <button class="tecla tecla_splash">Splash</button>
+            <button class="tecla tecla_toim">Toim</button>
+            <button class="tecla tecla_psh">Psh</button>
+            <button class="tecla tecla_tic">Tic</button>
+            <button class="tecla tecla_tom">Tom</button>
         </section>
-        <audio src="../audios/keya.wav" id="som-tecla-pom"></audio>
-        <audio src="../audios/keyc.wav" id="som-tecla-clap"></audio>
-        <audio src="../audios/keyd.wav" id="som-tecla-tim"></audio>
-        <audio src="../audios/keye.wav" id="som-tecla-puff"></audio>
-        <audio src="../audios/keyq.wav" id="som-tecla-splash"></audio>
-        <audio src="../audios/keys.wav" id="som-tecla-toim"></audio>
-        <audio src="../audios/keyw.wav" id="som-tecla-psh"></audio>
-        <audio src="../audios/keyx.wav" id="som-tecla-tic"></audio>
-        <audio src="../audios/keyz.wav" id="som-tecla-tom"></audio>
+        <audio src="../sounds/keyq.wav" id="som_tecla_pom"></audio>
+        <audio src="../sounds/keyw.wav" id="som_tecla_clap"></audio>
+        <audio src="../sounds/keye.wav" id="som_tecla_tim"></audio>
+        <audio src="../sounds/keya.wav" id="som_tecla_puff"></audio>
+        <audio src="../sounds/keys.wav" id="som_tecla_splash"></audio>
+        <audio src="../sounds/keyd.wav" id="som_tecla_toim"></audio>
+        <audio src="../sounds/keyz.wav" id="som_tecla_psh"></audio>
+        <audio src="../sounds/keyx.wav" id="som_tecla_tic"></audio>
+        <audio src="../sounds/keyc.wav" id="som_tecla_tom"></audio>
     </main>
     <footer>
         <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
