--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -38,15 +38,15 @@
             <button class="tecla tecla_tic">Tic</button>
             <button class="tecla tecla_tom">Tom</button>
         </section>
-        <audio src="../sounds/keyq.wav" id="som_tecla_pom"></audio>
-        <audio src="../sounds/keyw.wav" id="som_tecla_clap"></audio>
-        <audio src="../sounds/keye.wav" id="som_tecla_tim"></audio>
-        <audio src="../sounds/keya.wav" id="som_tecla_puff"></audio>
-        <audio src="../sounds/keys.wav" id="som_tecla_splash"></audio>
-        <audio src="../sounds/keyd.wav" id="som_tecla_toim"></audio>
-        <audio src="../sounds/keyz.wav" id="som_tecla_psh"></audio>
-        <audio src="../sounds/keyx.wav" id="som_tecla_tic"></audio>
-        <audio src="../sounds/keyc.wav" id="som_tecla_tom"></audio>
+        <audio src="../audios/keyq.wav" id="som_tecla_pom"></audio>
+        <audio src="../audios/keyw.wav" id="som_tecla_clap"></audio>
+        <audio src="../audios/keye.wav" id="som_tecla_tim"></audio>
+        <audio src="../audios/keya.wav" id="som_tecla_puff"></audio>
+        <audio src="../audios/keys.wav" id="som_tecla_splash"></audio>
+        <audio src="../audios/keyd.wav" id="som_tecla_toim"></audio>
+        <audio src="../audios/keyz.wav" id="som_tecla_psh"></audio>
+        <audio src="../audios/keyx.wav" id="som_tecla_tic"></audio>
+        <audio src="../audios/keyc.wav" id="som_tecla_tom"></audio>
     </main>
     <footer>
         <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
