--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <nav class="header__ul">
             <a class="header__link" href="index.html">Home</a>
-            <a class="header__link" href="disciplinas.html">Disciplinas</a>
+            <a class="header__link" href="disciplinas.html">Objetivos</a>
             <a class="header__link" href="sobrenos.html">Sobre nós</a>
             <a class="header__link" href="suporte.html">Suporte</a>
             <a class="header__link" href="calculadora.html">Calculadora</a>
